Adding forms to add vendors and customers